--- a/01_prediction_of_a_function_ouput/main.ipynb
+++ b/01_prediction_of_a_function_ouput/main.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -50,6 +50,17 @@
     "y = weight * X + bias\n",
     "plt.scatter(X.numpy(), y.numpy())\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_count:int=int(len(X)*0.8)\n",
+    "X_train,X_test = X[:train_data_count],X[train_data_count:]\n",
+    "y_train,y_test = y[:train_data_count],y[train_data_count:]"
    ]
   }
  ],
